# GeminiWindowsApp

./: .gitignore  README.md  main.js  package-lock.json  package.json
.github/workflows/: build-release.yml
frontend/: index.html
scratch/test_js/: init.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
