[package]
name = "gemini-windows-app"
version = "1.1.0"
description = "A simple Windows desktop application for Google Gemini"
authors = ["nwn900"]
license = "ISC"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-autostart = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
open = "5"
url = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "s"
panic = "abort"
